# vite-sam

./: .gitignore  README.md  index.html
.github/workflows/: deploy.yml
assets/: index-az4HzvbB.css  index-ycoROnXp.js  worker-lTvCvl1r.js
next-sam/components/ui/: button.tsx  card.tsx  textarea.tsx
notebooks/: .gitignore  SAM2-to-ONNX.ipynb  pyproject.toml
vite-sam/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
vite-sam/src/: App.tsx  globals.css
vite-sam/src/components/app/: GitHubButton.tsx  HardwareInfo.tsx
vite-sam/src/components/app/hardware/: HardwareInfo.tsx  HardwareInfoModal.tsx
vite-sam/src/hooks/: use-hardware-info.ts
vite-sam/src/lib/: SAM2.ts  constants.ts  imageutils.ts  types.d.ts  worker.ts
