[project]
name = "vite-sam-notebook"
version = "0.1.0"
description = "Vite SAM notebook dependencies"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "onnxscript>=0.1.0.dev20250114",
    "onnxsim>=0.4.36",
    "sam-2",
    "torch>=2.5.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/segment-anything-2.git" }
